
- Added function wxSFDiagramManager::UpdateAll() which updates all shapes in the diagram manager.
- Added function wxSFShapeDropEvent::GetDropTarget() which returns pointer to shape canvas where shapes have been dropped to.
- Added function wxSFShapePasteEvent::GetDropTarget() which returns pointer to shape canvas where shapes have been pasted to.
- Virtual function wxSFShapeBase::OnChildDropped() is now called even for child shapes dropped via Drag&Drop operation.
- Added ability to choose type of editable text shape's control. Use functions wxSFEditTextShape::SetEditType() and 
  wxSFEditTextShape::GetEditType() along with style wxSFEditTextShape::EDITTYPE (values editINPLACE and editDIALOG) are available
  for now).
- Pressing of the ENTER key when editable text (wxSFEditTextShape) is modified causes termination of editing process.
  Pressing of the ENTER key together with the SHIFT key will add a newline to the edited text (all applicable only in in-place edit mode).
- Disabled ability to print using wxGraphicsCanvas (due to crash) on Linux. For now only standard GDI functions are used instead.
- Improved "const correctness" of member functions.
- Fixed calculation of multiline text extent if wxGraphicsContext is used.
- Code clean-up.
- Updated premake build scripts to support CodeLite IDE.

Changes in version 1.7.1 beta (2008-12-20):
--------------------------------------------
- Switched to use wxXmlSerializer 1.1.9:
  - Added functions xsSerializable::GetFirstChild(wxClassInfo *type), xsSerializable::GetLastChild(wxClassInfo *type), xsSerializable::GetSibbling(wxClassInfo *type).
  - Changed declaration of xsSerializable::GetChildrenRecursively(wxClassInfo *type, SerializableList& list) function to
    xsSerializable::GetChildrenRecursively(wxClassInfo *type, SerializableList& list, SEARCHMODE mode), where 'mode' parameter can be 'searchDFS' for Depth-First-Search
    or 'searchBFS' for Breadth-First-Search algorithm. The 'searchBFS' is default.